--- a/public/index.html
+++ b/public/index.html
@@ -17,12 +17,12 @@
 
       <div class="container">
 
-        <h1>Tom Yeh</h1>
+        <h1>Kavya Ravikumar</h1>
 
         <h2>Favorite Programming Languages</h2>
         <ul class="collection">
-          <li class="collection-item">Javascript</li>
-          <li class="collection-item">Haskell</li>
+          <li class="collection-item">Java</li>
+          <li class="collection-item">Python</li>
         </ul>
 
         <h2>Favorite Food</h2>
@@ -32,10 +32,8 @@
       </div>
 
       <script>
-
         // create a firebase reference to the root
-        var ref = new Firebase('https://hello-ucdd2.firebaseio.com/')
-
+        var ref = new Firebase('https://kavyaravikumar.firebaseio.com/')
         // read data from the location bio/favorite_foods, only once
         ref.child('bio/favorite_foods').once('value', function(snapshot){
           var foods = snapshot.val()
@@ -46,3 +44,4 @@
       </script>
     </body>
   </html>
+Status API Training Shop Blog About Pricing
